# project-10-dniit

./: .gitignore  PLC_part.md  README.md  branchements.md  test_snap7.py
Reconaissance_obj/: Test_camera.py
Simulation/: Simulation_1erePerssone.m
matlab/: README.md
matlab/phase1/: animate_robot.m  cartesian_trajectory.m  forward_kinematics.m  inverse_kinematics.m  joint_space_trajectory.m  main_phase1.m  pid_simulation.m  plot_trajectory.m  robot_parameters.m  workspace_analysis.m
matlab/phase3/: main_phase3.m
matlab_simulation/: carpet_simulation.m
python/: README.md
python/phase2/: camera_calibration.py  detect_objects.py  generate_markers.py  kalman_tracker.py  main_phase2.py  pose_estimation.py  realsense_capture.py  requirements.txt  robot_transform.py
python/phase3/: gripper_controller.py  main_phase3.py  simulation_gui.py  visual_error.py  vs_controller.py
ros2/: README.md  rebuild.sh
ros2/src/scara_description/: CMakeLists.txt  package.xml
ros2/src/scara_description/config/: display.rviz
ros2/src/scara_description/launch/: display.launch.py
ros2/src/scara_description/urdf/: scara_robot.urdf.xacro
ros2/src/scara_moveit_config/: CMakeLists.txt  package.xml
ros2/src/scara_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  scara_robot.srdf
ros2/src/scara_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
ros2/src/scara_visual_servoing/: package.xml  setup.cfg  setup.py
ros2/src/scara_visual_servoing/launch/: bringup.launch.py  gazebo_sim.launch.py
ros2/src/scara_visual_servoing/resource/: scara_visual_servoing
ros2/src/scara_visual_servoing/scara_visual_servoing/: __init__.py  gazebo_bridge.py  sim_target_node.py  vision_node.py  vs_node.py
yolo_ai/: yolo_camera_macos.py
