<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_visual_servoing</name>
  <version>1.0.0</version>
  <description>
    Nœuds ROS2 d'asservissement visuel PBVS pour le robot SCARA 4-DOF.
    Encapsule le pipeline Phase 3 (vs_controller + visual_error + gripper_controller)
    dans des nœuds ROS2 Humble.
  </description>
  <maintainer email="stage@dut-danang.edu.vn">Stage M1</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
